--- a/skills.html
+++ b/skills.html
@@ -53,9 +53,22 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>
+                            <ol>
+                                <li>Leadership</li>
+                                <li>Adaptability</li>
+                                <li>Creativity</li>
+                                <li>Communication</li>
+                                    <ul>
+                                        <li>Advanced Spanish</li>
+                                        <li>Translation Abilities</li>
+                                    </ul>
+                                <li>Problem-solving</li>
+                                <li>Organized</li>
+                                <li>Punctual</li>
+                                <li>Adaptability</li>
+                            </ol>
+                        </p>
                     </div>
                 </div>
             </div>
