--- a/skills.html
+++ b/skills.html
@@ -55,18 +55,19 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>
                             <ol>
-                                <li>Leadership</li>
-                                <li>Adaptability</li>
-                                <li>Creativity</li>
+                                <li>Database design development</li>
+                                <li>Entity-Relationship Diagramming</li>
+                                <li>Structured Query Language</li>
                                 <li>Communication</li>
                                     <ul>
                                         <li>Advanced Spanish</li>
                                         <li>Translation Abilities</li>
                                     </ul>
-                                <li>Problem-solving</li>
-                                <li>Organized</li>
-                                <li>Punctual</li>
-                                <li>Adaptability</li>
+                                <li>Tableau</li>
+                                <li>Excel Solver, Pivot Tables, and Charts</li>
+                                <li>HTML, CSS, Bootstrap</li>
+                                <li>Flow Chart Diagramming</li>
+                                <li>Visual Basic for Applications (VBA) Programming in Excel</li>
                             </ol>
                         </p>
                     </div>
