--- a/education.html
+++ b/education.html
@@ -57,6 +57,13 @@
                         <p>I've learned so many cool things about business, technology, data, and more. But maybe the most important thing I've learned is how to learn.</p>
                         <ul>
                             <li>
+                                Provo High School
+                                <ul>
+                                    <li>2017 - 2021</li>
+                                    <li>Graduated With High Honors</li>
+                                </ul>
+                            </li>
+                            <li>
                                 Brigham Young University
                                 <ul>
                                     <li>2021 - Present</li>
