--- a/experience.html
+++ b/experience.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/overwrite.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -53,9 +54,28 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <div class="experiencedesign">
+                            <p>The Pizza Factory — Dishwasher <br>
+                                January 2017 - August 2017 <br>
+                                2230 N University Pkwy, Provo, UT 84604 <br>
+                            </p>
+                            <p>Riverside Country Club — Chalet Manager & Host <br>
+                                May 2019 - February  2021 <br>
+                                2701 N University Ave, Provo, UT 84604
+                            </p>
+                            <p>Jersey Mike's — Cook & Customer Service <br>
+                                December 2021 - March 2022 <br>
+                                73 S State St, Orem, UT 84058 <br>
+                            </p>
+                            <p> Utah Community Credit Union — Service Center Rep <br>
+                                May 2024 - July 2024 <br>
+                                305 W 800 N Orem North, UT 84057 <br>
+                            </p>
+                            <p> Brigham Young University - Risk Management Assistant <br>
+                                August 2024 - Present <br>
+                                450 E 800 N, Provo, UT 84604 <br>
+                            </p>
+                      </div>
                     </div>
                 </div>
             </div>
