--- a/skills.html
+++ b/skills.html
@@ -58,7 +58,7 @@
                                 <li>Database design development</li>
                                 <li>Entity-Relationship Diagramming</li>
                                 <li>Structured Query Language</li>
-                                <li>Communication</li>
+                                <li>Bilingual Communication</li>
                                     <ul>
                                         <li>Advanced Spanish</li>
                                         <li>Translation Abilities</li>
