--- a/skills.html
+++ b/skills.html
@@ -70,6 +70,8 @@
                                 <li>Visual Basic for Applications (VBA) Programming in Excel</li>
                             </ol>
                         </p>
+                        Check out this website I made about the Los Angeles Clippers!
+                        <a href="../../Documents/IS Project/html/index.html" target="_blank">Click here to visit the website</a>
                     </div>
                 </div>
             </div>
@@ -109,6 +111,7 @@
                     </div>
                 </div>
             </div>
+
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
